--- a/worship.html
+++ b/worship.html
@@ -18,16 +18,18 @@
     --muted:#9aa0ab; --text:#eaf6ff; --text-strong:#fff; --shadow:rgba(0,0,0,0.45);
   }
   html{font-size:100%}
-  body{margin:0;font-family:"Noto Sans KR",system-ui; background:var(--bg); color:var(--text)}
+  body{margin:0;font-family:"Noto Sans KR",system-ui; background:var(--bg); color:var(--text); overflow-x:hidden}
 
   /* header */
   .header{ background:var(--card); border-bottom:1px solid var(--line); position:sticky; top:0; z-index:1000; }
   .header-top{ display:flex; align-items:center; justify-content:space-between; gap:0.75rem; padding:0.8rem 1.2rem; }
   .brand{ display:flex; align-items:center; gap:0.7rem; text-decoration:none; color:var(--text); }
   .brand img{ width:46px; height:46px; object-fit:contain; border-radius:6px; background:transparent; }
-  .brand .title{ font-size:1.4rem; font-weight:900; color:var(--text-strong); }
+  /* 제목을 메인과 동일 크기로(일관성) */
+  .brand .title{ font-size:1.5rem; font-weight:900; color:var(--text-strong); }
+
   .right-controls{ display:flex; align-items:center; gap:0.6rem; }
-  .sp-badge{ padding:0.35rem 0.6rem; border-radius:0.6rem; background:transparent; border:1px solid var(--line); font-weight:800; color:var(--accent); }
+  .sp-badge{ padding:0.35rem 0.6rem; border-radius:0.6rem; background:transparent; border:1px solid var(--line); font-weight:800; color:var(--accent); min-width:76px; text-align:center; }
   .myhome-btn{ padding:0.45rem 0.9rem; border-radius:0.6rem; border:1px solid var(--line); background:var(--card); font-weight:700; color:var(--text); cursor:pointer; }
 
   /* nav */
@@ -49,8 +51,11 @@
   main{ max-width:1100px; margin:1.5rem auto; padding:1rem; display:flex; gap:1rem; align-items:flex-start; }
   .left{ flex:1; min-width:300px; display:flex; flex-direction:column; gap:1rem; align-items:center; }
   .card-wrap{ width:360px; height:420px; border-radius:14px; overflow:hidden; background:linear-gradient(180deg,rgba(255,255,255,0.03),rgba(0,0,0,0.02)); box-shadow:0 18px 40px var(--shadow); display:flex; align-items:center; justify-content:center; position:relative; }
-  /* 숭배 버튼 크기 1.3배: 폰트·패딩·높이 증가 */
-  #worshipBtn{ width:88%; height:78%; border-radius:12px; font-size:1.95rem; font-weight:900; border:0; cursor:pointer; background:linear-gradient(90deg,var(--accent),var(--accent-2)); color:#071018; box-shadow:0 14px 34px rgba(0,0,0,0.14); display:flex; align-items:center; justify-content:center; text-align:center; padding:0.4rem; }
+  /* 버튼 크기 1.3배 적용 (조정된 값) */
+  #worshipBtn{ width:88%; height:78%; border-radius:12px; font-size:1.95rem; font-weight:900; border:0; cursor:pointer; background:linear-gradient(90deg,var(--accent),var(--accent-2)); color:#071018; box-shadow:0 14px 34px rgba(0,0,0,0.14); display:flex; align-items:center; justify-content:center; text-align:center; padding:0.4rem; line-height:1.05; }
+
+  /* 줄넘김 텍스트 스타일 내부에서 제어 */
+  .worship-line{ display:block; line-height:1; }
 
   .right{ width:360px; display:flex; flex-direction:column; gap:0.9rem; }
   .meta{ background:var(--card); border-radius:10px; padding:0.85rem; box-shadow:0 8px 22px var(--shadow); font-size:0.95rem; color:var(--muted); }
@@ -61,7 +66,55 @@
   .buy{ background:linear-gradient(90deg,var(--accent),var(--accent-2)); color:#071018; }
   .reset{ background:transparent; border:1px solid var(--line); color:var(--muted); }
 
-  .controls-row{ display:flex; gap:0.6rem; margin-top:0.6rem; }
+  .controls-row{ display:flex; gap:0.6rem; margin-top:0.6rem; justify-content:flex-end; }
+
+  /* 성장 아이디어 영역 */
+  .ideas{ margin-top:0.8rem; background:linear-gradient(180deg,rgba(0,0,0,0.02),transparent); border-radius:8px; padding:0.6rem; font-size:0.9rem; color:var(--muted); }
+  .ideas h4{ margin:0 0 0.4rem 0; font-size:0.95rem; color:var(--text-strong); }
+
+  /* floating effect */
+  .float-elem{
+    position:absolute;
+    pointer-events:none;
+    transform:translate(-50%, -50%);
+    font-weight:900;
+    opacity:1;
+    white-space:nowrap;
+    display:inline-flex;
+    gap:6px;
+    align-items:center;
+    padding:2px 8px;
+    border-radius:12px;
+    background:linear-gradient(90deg, rgba(255,255,255,0.95), rgba(255,255,255,0.85));
+    color:#071018;
+    font-size:14px;
+    box-shadow:0 6px 18px rgba(0,0,0,0.12);
+    animation: floatUp 1000ms forwards;
+  }
+  html.dark .float-elem{ background:linear-gradient(90deg, rgba(20,20,30,0.9), rgba(10,10,20,0.85)); color:var(--text); }
+
+  @keyframes floatUp{
+    0%{ transform:translate(-50%, -10% ) scale(1); opacity:1; }
+    100%{ transform:translate(-50%, -140% ) scale(1.05); opacity:0; }
+  }
+
+  /* 이모지 burst (작게 중앙 표시) */
+  .burst{
+    position:fixed;
+    left:50%;
+    top:40%;
+    transform:translate(-50%,-50%);
+    font-size:40px;
+    pointer-events:none;
+    opacity:0;
+    animation: burstAnim 700ms forwards;
+    z-index:2000;
+  }
+  @keyframes burstAnim{
+    0%{ transform:translate(-50%,-50%) scale(.6); opacity:0; }
+    30%{ transform:translate(-50%,-80%) scale(1.25); opacity:1; }
+    100%{ transform:translate(-50%,-180%) scale(1.1); opacity:0; }
+  }
 
   @media(max-width:920px){
     main{ flex-direction:column; align-items:center; }
@@ -105,7 +158,10 @@
 <main>
   <div class="left">
     <div class="card-wrap">
-      <button id="worshipBtn" title="클릭하여 숭배하고 SP 획득">숭배하기<br><small style="font-size:0.6rem;opacity:0.8">(클릭으로 즉시 SP)</small></button>
+      <button id="worshipBtn" title="클릭하여 SP 얻기">
+        <span class="worship-line">클릭하여 SP</span>
+        <span class="worship-line">얻기</span>
+      </button>
     </div>
 
     <div style="width:360px;max-width:92%;display:flex;justify-content:space-between;color:var(--muted);font-weight:800">
@@ -117,23 +173,32 @@
   <aside class="right">
     <div class="meta">
       <div class="row"><div>총 SP</div><div id="totalSP">0</div></div>
-      <div class="row"><div>총 횟수</div><div id="totalClicks">0</div></div>
-      <div class="row"><div>마지막 저장</div><div id="savedAt">-</div></div>
+      <div class="row"><div>총 숭배 횟수</div><div id="totalClicks">0</div></div>
 
       <div style="margin-top:0.6rem;font-weight:800;color:var(--text-strong)">상점</div>
       <div class="store" id="store"></div>
 
       <div class="controls-row">
-        <button id="exportBtn" class="reset">저장 내보내기</button>
-        <button id="deleteSaveBtn" class="reset">마지막 저장 삭제</button>
         <button id="resetBtn" class="reset">초기화</button>
+      </div>
+
+      <div class="ideas">
+        <h4>성장의 재미 아이디어</h4>
+        <ul style="margin:0 0 0.4rem 1rem;padding:0;color:var(--muted)">
+          <li>일일/주간 퀘스트 추가: 목표 달성 보상으로 대량 SP</li>
+          <li>픽업(확률) 시스템: 일정 확률로 보너스 보상 또는 이벤트 등장</li>
+          <li>건물 별 특수 효과: 예) 제단은 크리티컬(더블 클릭 보상) 확률 상승</li>
+          <li>시간 기반 업적과 보존 요소: 오래 유지할수록 추가 보너스</li>
+          <li>시각적 성장(마을 확장): 건물 증가에 따라 배경 변화</li>
+        </ul>
+        <div style="font-size:0.85rem;color:var(--muted)">원하면 아이디어 중 한 가지를 바로 구현해 준다.</div>
       </div>
     </div>
   </aside>
 </main>
 
 <script>
-/* 저장 키 및 기본값 (history 제거) */
+/* 상태 및 기본값 (history 제거) */
 const KEY = 'zk_tycoon_v1';
 const DEFAULT = {
   sp: 0,
@@ -150,28 +215,24 @@ const DEFAULT = {
   },
   lastSaved: 0
 };
-
 let state = loadState();
 
 /* DOM */
 const spBadge = document.getElementById('spBadge');
 const totalSP = document.getElementById('totalSP');
 const totalClicks = document.getElementById('totalClicks');
-const savedAt = document.getElementById('savedAt');
 const spsEl = document.getElementById('sps');
 const manualPowerEl = document.getElementById('manualPower');
 const worshipBtn = document.getElementById('worshipBtn');
 const storeEl = document.getElementById('store');
 const resetBtn = document.getElementById('resetBtn');
-const exportBtn = document.getElementById('exportBtn');
-const deleteSaveBtn = document.getElementById('deleteSaveBtn');
 
-/* 상점 항목 정의 */
+/* 상점 항목 정의 및 이모지 매핑 */
 const ITEMS = [
-  { key:'follower', label:'추종자', desc:'+0.5 SPS', costFn: (s)=>Math.ceil(s.baseCost * Math.pow(1.15, s.count)) },
-  { key:'altar', label:'제단', desc:'+2 SPS', costFn: (s)=>Math.ceil(s.baseCost * Math.pow(1.15, s.count)) },
-  { key:'temple', label:'사원', desc:'+12 SPS', costFn: (s)=>Math.ceil(s.baseCost * Math.pow(1.15, s.count)) },
-  { key:'devotion', label:'헌신 강화', desc:'수동 파워 2배', costFn: (u)=>Math.ceil(u.baseCost * Math.pow(2.5, u.level)) }
+  { key:'follower', label:'추종자', desc:'+0.5 SPS', costFn: (s)=>Math.ceil(s.baseCost * Math.pow(1.15, s.count)), emoji:'👤' },
+  { key:'altar', label:'제단', desc:'+2 SPS', costFn: (s)=>Math.ceil(s.baseCost * Math.pow(1.15, s.count)), emoji:'🕯️' },
+  { key:'temple', label:'사원', desc:'+12 SPS', costFn: (s)=>Math.ceil(s.baseCost * Math.pow(1.15, s.count)), emoji:'🏛️' },
+  { key:'devotion', label:'헌신 강화', desc:'수동 파워 2배', costFn: (u)=>Math.ceil(u.baseCost * Math.pow(2.5, u.level)), emoji:'✨' }
 ];
 
 /* 로드/저장 */
@@ -186,11 +247,10 @@ function loadState(){
     return jsonClone(DEFAULT);
   }
 }
-
 function saveState(){
   state.lastSaved = Date.now();
   localStorage.setItem(KEY, JSON.stringify(state));
-  // 외부 인덱스/탭 동기화용 스냅샷(간단)
+  // My Home 옆 SP는 소수점 없이 정수로 표시
   localStorage.setItem('zk_sp_v1', String(Math.floor(state.sp)));
   updateUI();
 }
@@ -199,7 +259,7 @@ function saveState(){
 function jsonClone(o){ return JSON.parse(JSON.stringify(o)); }
 function formatNum(n){ if(n>=1000000) return Math.floor(n).toLocaleString(); return Math.round((n + Number.EPSILON) * 100)/100; }
 
-/* 계산 및 UI 렌더 */
+/* 계산 및 UI */
 function calcSPS(){
   let total = 0;
   for(const k of ['follower','altar','temple']){
@@ -211,16 +271,15 @@ function calcSPS(){
 }
 
 function updateUI(){
-  spBadge.textContent = formatNum(state.sp) + ' SP';
+  spBadge.textContent = Math.floor(state.sp) + ' SP';      // 정수 표시
   totalSP.textContent = formatNum(state.sp);
   totalClicks.textContent = state.totalClicks;
-  savedAt.textContent = state.lastSaved ? new Date(state.lastSaved).toLocaleTimeString() : '-';
   spsEl.textContent = (Math.round(calcSPS()*100)/100).toFixed(2);
   manualPowerEl.textContent = state.manualPower;
   renderStore();
 }
 
-/* 상점 렌더링 (구매 버튼은 항상 최신 비용을 계산) */
+/* 상점 렌더: 최신 비용으로 즉시 버튼 상태 갱신 */
 function renderStore(){
   storeEl.innerHTML = '';
   ITEMS.forEach(item=>{
@@ -237,7 +296,7 @@ function renderStore(){
       btn.textContent = formatNum(cost) + ' SP';
       btn.className = 'buy';
       btn.disabled = state.sp < cost;
-      btn.addEventListener('click', ()=> buyItemDevotion(cost));
+      btn.addEventListener('click', ()=> { buyItemDevotion(item, cost); });
       right.appendChild(btn);
     } else {
       const b = state.buildings[item.key];
@@ -247,7 +306,7 @@ function renderStore(){
       btn.textContent = formatNum(cost) + ' SP';
       btn.className = 'buy';
       btn.disabled = state.sp < cost;
-      btn.addEventListener('click', ()=> buyBuilding(item.key, cost));
+      btn.addEventListener('click', ()=> { buyBuilding(item, cost); });
       right.appendChild(btn);
     }
 
@@ -257,104 +316,103 @@ function renderStore(){
   });
 }
 
-/* 구매: 건물 */
-function buyBuilding(key, costAtClick){
-  // 재검증: 현재 비용 재계산 후 차감
+/* 구매: 건물 (cost 재계산 및 즉시 반영) */
+function buyBuilding(item, costAtClick){
+  const key = item.key;
   const b = state.buildings[key];
   const currentCost = Math.ceil(b.baseCost * Math.pow(1.15, b.count));
-  if(state.sp < currentCost) return; // 안전장치
+  if(state.sp < currentCost) return;
   state.sp -= currentCost;
   b.count += 1;
-  calcSPS();
+  // 즉시 UI 갱신 + 저장
+  showEmojiEffect(item.emoji);
   saveState();
 }
 
 /* 구매: 헌신 업그레이드 */
-function buyItemDevotion(costAtClick){
+function buyItemDevotion(item, costAtClick){
   const u = state.upgrades.devotion;
   const currentCost = Math.ceil(u.baseCost * Math.pow(2.5, u.level));
   if(state.sp < currentCost) return;
   state.sp -= currentCost;
   u.level += 1;
   state.manualPower *= u.effect;
+  showEmojiEffect(item.emoji);
   saveState();
 }
 
-/* 숭배 버튼 (수동 수입) */
-worshipBtn.addEventListener('click', ()=>{
-  state.sp += state.manualPower;
+/* 숭배 클릭: 수동 보상 + 플로팅 이펙트, 즉시 저장 및 UI 갱신 */
+worshipBtn.addEventListener('click', (ev)=>{
+  const gain = state.manualPower;
+  state.sp += gain;
   state.totalClicks += 1;
   saveState();
+  // 플로팅 텍스트 (마우스 위치)
+  const x = ev.clientX + window.scrollX;
+  const y = ev.clientY + window.scrollY;
+  showFloatingAt(x, y, `🛐 +${gain} SP`);
 });
 
-/* 자동 수입 (tick) — 100ms 간격으로 부드럽게 증가 */
+/* floating text 생성 */
+function showFloatingAt(x, y, text){
+  const el = document.createElement('div');
+  el.className = 'float-elem';
+  el.style.left = x + 'px';
+  el.style.top = y + 'px';
+  el.innerText = text;
+  document.body.appendChild(el);
+  // 제거: 애니메이션 길이와 동일
+  setTimeout(()=> { el.remove(); }, 1000);
+}
+
+/* 이모지 burst 중앙 이펙트 */
+function showEmojiEffect(emoji){
+  const el = document.createElement('div');
+  el.className = 'burst';
+  el.textContent = emoji;
+  document.body.appendChild(el);
+  setTimeout(()=> el.remove(), 800);
+}
+
+/* 자동 수입 (tick) — 100ms 간격, 즉시 UI 반영 */
 let tickTimer = null;
 function startTick(){
   if(tickTimer) clearInterval(tickTimer);
   tickTimer = setInterval(()=>{
     const sps = calcSPS();
-    // 분배: 10번에 나눠서 0.1s마다 추가
-    const delta = sps / 10;
-    if(delta > 0) {
-      state.sp += delta;
-      // 소수 누적은 허용. UI 반올림으로 표시.
+    if(sps > 0){
+      state.sp += sps / 10; // 0.1s 단위 분배
     }
-    // update only UI frequently but persist periodically
+    // UI는 매 tick에서 갱신 (버튼 활성/비활성 즉시 반영)
     updateUI();
   }, 100);
 }
 
-/* 자동 저장 */
-let saveTimer = null;
-function startAutoSave(){
-  if(saveTimer) clearInterval(saveTimer);
-  saveTimer = setInterval(()=> saveState(), 5000);
-}
-
-/* 초기화 */
-document.getElementById('resetBtn').addEventListener('click', ()=>{
+/* 초기화 버튼 */
+resetBtn.addEventListener('click', ()=>{
   if(!confirm('게임을 초기화합니까? 저장된 모든 진행이 삭제됩니다.')) return;
   state = jsonClone(DEFAULT);
   saveState();
   updateUI();
 });
 
-/* 저장 내보내기 */
-exportBtn.addEventListener('click', ()=>{
-  const payload = btoa(unescape(encodeURIComponent(JSON.stringify(state))));
-  // prompt로 복사 용이하게 표시
-  prompt('저장된 데이터 (base64). 백업용으로 보관하세요.', payload);
-});
-
-/* 마지막 저장 삭제: 로컬스토리지에서 삭제 (메모리 상태 유지) */
-deleteSaveBtn.addEventListener('click', ()=>{
-  if(!confirm('로컬에 저장된 최신 저장을 삭제합니다. 계속하시겠습니까?')) return;
-  localStorage.removeItem(KEY);
-  localStorage.removeItem('zk_sp_v1');
-  // do not overwrite in-memory state; mark lastSaved=0
-  state.lastSaved = 0;
-  updateUI();
-  alert('마지막 저장(로컬)이 삭제되었습니다. 페이지 새로고침 시 삭제된 상태가 반영됩니다.');
-});
-
-/* storage 이벤트: 다른 탭에서 상태 변경 시 동기화 */
+/* storage 이벤트: 다른 탭에서 키 변경 시 동기화 */
 window.addEventListener('storage', (e)=>{
-  if(e.key === KEY){
-    // 새 값이 들어오면 재로딩
+  if(e.key === KEY || e.key === 'zk_sp_v1'){
     try{
       const parsed = JSON.parse(localStorage.getItem(KEY) || '{}');
       if(parsed && typeof parsed.sp !== 'undefined'){
         state = Object.assign(jsonClone(DEFAULT), parsed);
         updateUI();
       }
-    }catch(err){ console.warn('storage sync parse failed', err); }
+    }catch(err){ /* ignore */ }
   }
 });
 
-/* 네비 활성화 */
+/* NAV active */
 (function(){ const el = document.getElementById('link-worship'); if(el) el.classList.add('active'); })();
 
-/* 테마 토글 */
+/* 테마 토글 (동일 코드) */
 (function(){
   const toggle = document.getElementById('themeToggle');
   const apply = (t) => {
@@ -371,16 +429,16 @@ window.addEventListener('storage', (e)=>{
   });
 })();
 
-/* 시작 */
+/* 시작: 유효성 보정, UI 업데이트, tick, autosave */
 (function init(){
-  // ensure numeric fields correct
   state.sp = Number(state.sp) || 0;
   state.totalClicks = Number(state.totalClicks) || 0;
   state.manualPower = Number(state.manualPower) || DEFAULT.manualPower;
   calcSPS();
   updateUI();
   startTick();
-  startAutoSave();
+  // autosave frequently but not UI exposed
+  setInterval(()=> saveState(), 5000);
 })();
 </script>
 </body>
